tests/bad_netpols/subdir3/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shippingservice-netpol
spec:
  egress: []
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice
      ipBlock:
        cidr: 0.0.0.0/0     # bad rule peer: cannot have both podSelector and ipBlock
    ports:
    - port: 50051
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - port: 50051
  podSelector:
    matchLabels:
      app: shippingservice
  policyTypes:
  - Ingress
  - Egress
